# tokenMonitor

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: com.tokmon.sync.plist.template  install-on-pi.sh  setup-client-linux.sh  setup-client-macos.sh  setup-client-windows.ps1  setup-pi.sh  tokmon-ingest.service  tokmon-ingest.timer  tokmon-serve.service  tokmon-update.sh
docs/superpowers/plans/: 2026-06-30-attenborough-mode.md  2026-07-01-live-narration-toggle.md
docs/superpowers/specs/: 2026-06-30-attenborough-mode-design.md  2026-07-01-live-narration-toggle-design.md
tests/: test_analytics.py  test_documentary.py  test_ingest.py  test_pricing.py  test_sync.py
tests/fixtures/: synthetic.jsonl
tokmon/: __init__.py  analytics.py  cli.py  config.py  db.py  documentary.py  ingest.py  pricing.py  pricing.toml  schema.py  server.py  sync.py  watcher.py
web/: index.html
