[project]
name = "tokmon"
version = "0.1.0"
description = "Local analytics for Claude Code token usage"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "watchdog>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "pydantic>=2.9.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
tokmon = "tokmon.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tokmon"]

[tool.hatch.build.targets.wheel.force-include]
"web" = "tokmon/_web"
